<resources>
    <string name="app_name">Note App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- custom string -->
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="title_hint">Masukkan Judul</string>
    <string name="notes_hint">Tulis Sesuatu</string>
    <string name="search_hint">Cari Catatan</string>
    <string name="greet">Guest</string>
    <string name="btn_add">add</string>
    <string name="pin_notes">Pin</string>
    <string name="delete_note">Hapus</string>
    <string name="unpin_notes">Unpin</string>
</resources>