<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_15sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/title"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_17ssp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:ellipsize="marquee"/>

            <ImageView
                android:id="@+id/pinned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_pin"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="7"
            android:ellipsize="marquee"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/_15sdp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>