<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InsertNoteFragments">

    <RelativeLayout
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_back"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

         <TextView
            android:id="@+id/input_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
             android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_save"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/title_hint"
            android:textSize="@dimen/_17ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:inputType="text"
            android:singleLine="true"
            android:includeFontPadding="false"
            android:background="@null"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/input_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@null"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_13ssp"
            android:hint="@string/notes_hint"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:maxLines="500"
            android:importantForAutofill="no"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>